# research_lab

./: .gitignore  floor_baseline.json  logitech_slot_positions.json  map_logitech_slots.py  mix.py  slot_positions.json  trained_colors.json
.claude/: settings.local.json
Log/: OrbbecSDK.log.txt
color_detector_node/: Dockerfile  __init__.py  compose.yaml  interface.py  node.py  node_definition.yaml  types.py
ot2_color_lab/: .gitignore  README.md  pyproject.toml  settings.yaml  start_lab.py
ot2_color_lab/workflows/: color_mix.workflow.yaml  example.workflow.yaml
ot2_node/: node.py  node_definition.yaml
